manifests/00-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vdi-dev
